[fix] post code overflow fix

--- a/public/css/post.css
+++ b/public/css/post.css
@@ -51,6 +51,7 @@
 .post-content div {
     border-radius: 10px;
     padding: 10px;
+    white-space: normal;
 }
 
 .post-content div div {
